# kaggle-cell-seg

./: .gitignore  Dockerfile  README.md  config.yml  diagram.py  docker-compose.yml  eda.py  evaluate.py  mypy.ini  pyproject.toml  pytest.ini  setup.py  setup_store.sh  train.py
.circleci/: config.yml
cellseg/: assign.py  backbones.py  batch_transform.py  blocks.py  center_mask.py  center_roi_mask.py  center_segment.py  config.py  convs.py  coord_conv.py  data.py  dataset.py  heads.py  loss.py  lt_models.py  metrics.py  modules.py  necks.py  solo.py  util.py  utils.py  yolox.py
cellseg/solo/: __init__.py  adaptors.py  convs.py  heads.py  mask_head.py  mkmaps.py
config/: center_mask.yaml  config.center.yaml  config.next.yaml  config.slim.yaml  config.yaml  config.yml  mask_yolo.yaml  solo.yaml
data/: annotation.csv  masks-0030fd0e6378.pth
docs/: s_x_s_search.md  sip_mask.md  solov2.md
tests/: test_assign.py  test_backbones.py  test_blocks.py  test_center_mask.py  test_center_segment.py  test_convs.py  test_coord_conv.py  test_data.py  test_dataset.py  test_eveluate.py  test_heads.py  test_loss.py  test_metrics.py  test_modules.py  test_necks.py  test_patch.py  test_solo.py  test_yolox.py
tests/solo/: test_adaptors.py  test_convs.py  test_coord_conv.py  test_heads.py  test_mask_head.py  test_mkmaps.py  test_seg_to_center.py  test_solo.py
workflows/: eveluate.py  eveluate_yolox.py  train.py  train_center_mask.py  train_ctr.py  train_solo.py  train_yolox.py
