[tool.poetry]
name = "cellseg"
version = "0.1.0"
description = "cellseg"
license = "MIT"
authors = []

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.21.3"
kaggle = "^1.5.12"
pandas = "^1.3.4"
omegaconf = "^2.1.1"
scikit-learn = "^1.0.1"
matplotlib = "^3.4.3"
torch = "^1.10.0"
torchvision = "^0.11.1"
hydra-core = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mypy = "^0.910"
black = "^21.9b0"
pytest-mypy = "^0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
